--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,3 @@
-<app-home>asddfdsafdas</app-home>
-<app-home>fdsafdsafs</app-home>
-<app-home>Hello, World!!!!!</app-home>
+<app-gem>asddfdsafdas</app-gem>
+<app-gem>fdsafdsafs</app-gem>
+<app-gem>Hello, World!!!!!</app-gem>
