--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,4 +10,10 @@
   <p>{{dog}}</p>
   <p>Is {{dog.name}} hungry? {{dog.isHungry}}</p>
   <p>Is {{dog.name | uppercase}} hungry?</p>
+  
+  <nav class="navbar navbar-light bg-light">
+    <a class="navbar-brand" href="#">
+      <img src="/docs/4.1/assets/brand/bootstrap-solid.svg" width="30" height="30" alt="">
+    </a>
+  </nav>
 </footer>
