--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,6 @@
-<app-gem>asddfdsafdas</app-gem>
-<app-gem>fdsafdsafs</app-gem>
-<app-gem>Hello, World!!!!!</app-gem>
+<div class="card-deck">
+    <app-gem [gem] = 'homeGems[0]'></app-gem>
+    <app-gem [gem] = 'homeGems[1]'></app-gem>
+    <app-gem [gem] = 'homeGems[2]'></app-gem>
+</div>
+
