--- a/src/app/gem/gem.component.html
+++ b/src/app/gem/gem.component.html
@@ -11,6 +11,8 @@
 
 </div>
 
+<app-tabs [gem] = "gem"></app-tabs>
+
 <div class="card" style="width: 18rem;">
     <img class="card-img-top" src="{{gem.fullImagePath}}" alt="Card image cap">
     <div class="card-body">
@@ -27,7 +29,7 @@
       <option *ngFor="let color of gem.colors">{{color}}</option>
     </select>
     
-    <button *ngIf="gem.inventory > 0" class="btn btn-default">Add To Cart</button>
+    <button *ngIf="gem.inventory > 0" class="btn btn-default" (click) = "addToCart()"> Add To Cart</button>
 
     <button *ngIf="gem.inventory <= 0" class="btn btn-danger" disabled>Sold Out</button>
 </div> 
