On TabsComponents.ts
I set the tab value to = 1 (error went away).

--- a/src/app/tabs/tabs.component.html
+++ b/src/app/tabs/tabs.component.html
@@ -4,13 +4,15 @@
   </li> 
 
   <li class="nav-item">
-    <a class= "nav-link" href="#" (click) = "setTab(2)">Colors</a>
+    <a class= "nav-link" href="#" (click) = "tab = 2">Colors</a>
   </li>
 
   <li class="nav nav-item">
-    <a class= "nav-link" href="#" (click) = "setTab(3)">Reviews</a>
+    <a class= "nav-link" href="#" (click) = "tab = 3">Reviews</a>
   </li>
 </ul> 
+
+<!--replace tab = 1 with setTab(3)-->
 
 <div *ngIf="tab === 1">
   Tab 1
