--- a/src/app/tabs/tabs.component.html
+++ b/src/app/tabs/tabs.component.html
@@ -1,14 +1,14 @@
 <ul class="nav nav-pills">
   <li class="nav-item">
-    <a class= "nav-link" href="#" (click) = "tab = 1" [class.active] = "tab === 1">Description</a>
+    <a class= "nav-link" href="#" (click) = "setTab(1)" [class.active] = "tab === 1">Description</a>
   </li> 
 
   <li class="nav-item">
-    <a class= "nav-link" href="#" (click) = "tab = 2" [class.active] = "tab === 2">Colors</a>
+    <a class= "nav-link" href="#" (click) = "setTab(2)" [class.active] = "tab === 2">Colors</a>
   </li>
 
   <li class="nav nav-item">
-    <a class= "nav-link" href="#" (click) = "tab = 3" [class.active] = "tab === 3">Reviews</a>
+    <a class= "nav-link" href="#" (click) = "setTab(3)" [class.active] = "tab === 3">Reviews</a>
   </li>
 </ul> 
 
