Commented out the 2 extra images.
Commented out  <!-- <img src="{{gem.fullImagePath}}" alt="{{gem.name}}"> -->
  <!-- <img [src] = "gem.fullImagePath" [alt]="gem.name"> --> These two lines of code contributed to the extra images.

--- a/src/app/gem/gem.component.html
+++ b/src/app/gem/gem.component.html
@@ -2,12 +2,12 @@
 
 <div>
 
-  {{gem.id}}
+  <!-- {{gem.id}}
   {{gem.name}}
   {{gem.price | currency}}
-  {{gem.description}}
-  <img src="{{gem.fullImagePath}}" alt="{{gem.name}}">
-  <img [src] = "gem.fullImagePath" [alt]="gem.name">
+  {{gem.description}} -->
+  <!-- <img src="{{gem.fullImagePath}}" alt="{{gem.name}}"> -->
+  <!-- <img [src] = "gem.fullImagePath" [alt]="gem.name"> -->
 
 </div>
 
