--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,8 @@
 <div class="card-deck">
-    <!-- <app-gem [gem] = 'homeGems[1]' *ngFor="let item of homeGems"></app-gem> -->
+    <!-- <app-gem [gem] = 'homeGems[0]'></app-gem>
     <app-gem [gem] = 'homeGems[1]'></app-gem>
-    <app-gem [gem] = 'homeGems[2]'></app-gem>
+    <app-gem [gem] = 'homeGems[2]'></app-gem> -->
+
+    <app-gem [gem] = 'Each_Gem' *ngFor="let Each_Gem of homeGems"></app-gem>   
 </div>
 
