--- a/src/app/tabs/tabs.component.html
+++ b/src/app/tabs/tabs.component.html
@@ -1,6 +1,7 @@
+<!--
 <ul class="nav nav-pills">
   <li class="nav-item">
-    <a class= "nav-link" href="#" (click) = "setTab(1)" [class.active] = "tab === 1">Description</a>
+    <a class= "nav-link" href="#" (click) = "setTab(1)" [class.active] = "tab === 1">description</a>
   </li> 
 
   <li class="nav-item">
@@ -10,13 +11,14 @@
   <li class="nav nav-item">
     <a class= "nav-link" href="#" (click) = "setTab(3)" [class.active] = "tab === 3">Reviews</a>
   </li>
-</ul> 
+</ul> -->
 
 <!--replace tab = 1 with setTab(3)-->
 
+<!--
 <div *ngIf="tab === 1">
-  Tab 1
-</div> 
+  tab1 --> <!--This is what pops up when the user clicks the specified tab (in this case, tab 1). Now, if you want it return the gem's description, you use: {{gem.description}}-->
+<!--</div> 
 
 <div *ngIf="tab === 2">
   Tab 2
@@ -24,6 +26,6 @@
 
 <div *ngIf="tab === 3">
   Tab 3
-</div>
+</div> -->
 
 
