--- a/src/app/gem/gem.component.html
+++ b/src/app/gem/gem.component.html
@@ -9,26 +9,16 @@
   <img [src] = "gem.fullImagePath" [alt]="gem.name"> -->
 <!-- </div> -->
 
-<app-tabs [gem] = "gem"></app-tabs>
-
 <div class="card" style="width: 18rem;">
-    <img class="card-img-top" src="{{gem.fullImagePath}}" alt="Card image cap">
+    <img class="card-img-top" src="{{gem.fullImagePath}}" alt="{{gem.name}}">
     <div class="card-body">
       <h5 class="card-title">{{gem.name}}</h5>
-      <p class="card-text">{{gem.description}}</p>
       <p class="card-text">{{gem.price || currency}}</p>
-      <p class="card-text">Available colors</p> <!--This is the header for our list-->  
-        <!-- <ul class="card-text">
-          <li *ngFor = "let color of gem.colors">{{color}}</li> This is how we iterate through the list
-        </ul>    -->
-
-        <!--The code below takes the unordered list ('ul') from above and converts it into a <select><option></option></select>. Without the code below, we will only have an unordered list. -->
-    <select class="form-control">
+      <app-tabs [gem]="gem"></app-tabs>
+      <select class="form-control">
       <option *ngFor="let color of gem.colors">{{color}}</option>
-    </select>
-    </div>
-
-    
+      </select>
+    </div> 
     
     <button *ngIf="gem.inventory > 0" class="btn btn-default" (click) = "addToCart()"> Add To Cart</button>
 
