--- a/src/app/reviews/reviews.component.html
+++ b/src/app/reviews/reviews.component.html
@@ -1,8 +1,11 @@
-<h6>Reviews</h6>
+
 <!--Existing Reviews-->
 <h6>Reviews</h6>
 <div *ngFor="let review of gem.reviews">
     <div class="row">
+            <div class="col-2">
+                    <!-- <img class="img-fluid" src="https://2.gravatar.com/avatar/blank" />
+                </div> -->
         <div class="col-10">
             <blockquote class="blockquote">
                 <p class="mb-0">{{review.body}}</p>
@@ -14,7 +17,8 @@
         </div>
     </div>
 </div>
-<!--New Review -->
+
+<!--New Reviews-->
 
 <div class="row">
     <div class="col-10">
@@ -27,13 +31,43 @@
             <h1>{{newReview.rating}}</h1> 
     </div>
 </div>
-<form (ngSumbit) = "submitClicked()">
+
+<form (ngSubmit) = "submitClicked(); reviewForm.reset()" #reviewForm = "ngForm" >
+
+    <div *ngIf="reviewForm.invalid && email.touched && body.touched" class="alert alert-danger">
+        <ul>
+            <li *ngIf="email.errors && email.errors.required">
+                Email is required.
+            </li>
+            <li *ngIf="email.errors && email.errors.pattern">
+                Email is not formatted correctly.
+            </li>
+            <li *ngIf="body.errors && body.errors.required">
+                Body is required.
+            </li>
+            <li *ngIf="rating.errors && rating.errors.required">
+                Rating is required.
+            </li>
+            <li *ngIf="textarea.value == 0">
+                Text area cannot be left blank.
+            </li>
+        </ul>    
+    </div>
+
     <div class="form-group">
         <label for="email">Email</label>
-        <input class="form-control" type="email" placeholder="Enter your email" name="email" [(ngModel)] = "newReview.Author"/> </div>
+        <input class="form-control" type="email" placeholder="Enter your email" name="email" [(ngModel)] = "newReview.author" pattern= "[a-z0-9._%+-]+@[a-z0-9.-] +\.[a-z]{2,3}$"/> </div>
+    
+    <!--Alert info-->
+    <div class = "alert alert-info">
+        <p>Author valid: {{email.valid}}</p>
+        <p>Author Invalid: {{email.invalid}}</p>
+        <p>Author Dirty: {{email.dirty}}</p>
+    </div>
+        
     <div class="form-group">
         <label for="body">Review</label>
-        <textarea class="form-control" placeholder="Enter your review" name="body" [(ngModel)] = "newReview.body"></textarea>
+        <textarea class="form-control" placeholder="Enter your review" name="body" [(ngModel)] = "newReview.body" maxlength="400"></textarea>
     </div>
     <div class="form-group">
         <label for="rating">Rating</label>
@@ -46,5 +80,7 @@
         </select>
     </div>
     <input type="submit" class="btn btn-default" value="Submit Review" />
+
+   
 </form>
 
