--- a/src/app/reviews/reviews.component.html
+++ b/src/app/reviews/reviews.component.html
@@ -3,9 +3,9 @@
 <h6>Reviews</h6>
 <div *ngFor="let review of gem.reviews">
     <div class="row">
-        <div class="col-2">
+        <!-- <div class="col-2">
             <img class="img-fluid" src="https://2.gravatar.com/avatar/blank" />
-        </div>
+        </div> -->
 
         <div class="col-10">
             <blockquote class="blockquote">
