--- a/src/app/reviews/reviews.component.html
+++ b/src/app/reviews/reviews.component.html
@@ -1,88 +1,56 @@
 
-<!--Existing Reviews-->
-<h6>Reviews</h6>
-<div *ngFor="let review of gem.reviews">
-    <div class="row">
-        <!-- <div class="col-2">
-            <img class="img-fluid" src="https://2.gravatar.com/avatar/blank" />
-        </div> -->
 
-        <div class="col-10">
-            <blockquote class="blockquote">
-                <p class="mb-0">{{review.body}}</p>
-                <footer class="blockquote-footer"><cite>{{review.author}}</cite></footer>
-            </blockquote>
-        </div>
+<!--This page GENERATES the REVIEW form for the user to fill out.-->
 
-        <div class="col-2">
-            <h1>{{review.rating}}</h1> 
-        </div>
-    </div>
-</div>
-
-<!--New Reviews-->
-
-<div class="row">
-    <div class="col-10">
-            <blockquote class="blockquote">
-                <p class="mb-0">{{newReview.body}}</p>
-                <footer class="blockquote-footer"><cite>{{newReview.author}}</cite></footer>
-            </blockquote>
-    </div>
-    <div class="col-2">
-            <h1>{{newReview.rating}}</h1> 
-    </div>
-</div>
-
-<form (ngSubmit) = "submitClicked(); reviewForm.reset()" #reviewForm = "ngForm" >
-
-    <div *ngIf="reviewForm.invalid && email.touched && body.touched" class="alert alert-danger">
-        <ul>
+<form (ngSubmit)="submitClicked(); reviewForm.reset()" #reviewForm="ngForm">
+	<div *ngIf="reviewForm.invalid && email.touched && body.touched" class="alert alert-danger">
+		<ul>
             <li *ngIf="email.errors && email.errors.required">
                 Email is required.
             </li>
-            <li *ngIf="email.errors && email.errors.pattern">
+			<li *ngIf="email.errors && email.errors.pattern">
                 Email is not formatted correctly.
             </li>
-            <li *ngIf="body.errors && body.errors.required">
+			<li *ngIf="body.errors && body.errors.required">
                 Body is required.
             </li>
-            <li *ngIf="rating.errors && rating.errors.required">
+			<li *ngIf="rating.errors && rating.errors.required">
                 Rating is required.
             </li>
-            <li *ngIf="textarea.value == 0">
-                Text area cannot be left blank.
-            </li>
-        </ul>    
+        </ul>
+    </div>
+    
+    <div class="form-group">
+        <label for="email">Email</label>
+        <input  class="form-control" type="email" placeholder="Enter your email" name="email" [(ngModel)]="newReview.author" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$" #email="ngModel" [class.is-valid]="email.valid" [class.is-invalid]="email.invalid && email.touched" />
+		<div class="invalid-feedback">
+			Email is required and needs to look like an email address.
+		</div>
+		
+    </div>
+    
+    <div class="form-group">
+        <label for="body">Review</label>
+        <textarea class="form-control" placeholder="Enter your review" name="body" [(ngModel)]="newReview.body" required #body="ngModel" [class.is-valid]="body.valid" [class.is-invalid]="body.invalid && body.touched"></textarea>
+            <div class="invalid-feedback">
+                Review is required.
+            </div>
     </div>
 
     <div class="form-group">
-        <label for="email">Email</label>
-        <input class="form-control" type="email" placeholder="Enter your email" name="email" [(ngModel)] = "newReview.author" pattern= "[a-z0-9._%+-]+@[a-z0-9.-] +\.[a-z]{2,3}$"/> </div>
-    
-    <!--Alert info-->
-    <div class = "alert alert-info">
-        <p>Author valid: {{email.valid}}</p>
-        <p>Author Invalid: {{email.invalid}}</p>
-        <p>Author Dirty: {{email.dirty}}</p>
-    </div>
-        
-    <div class="form-group">
-        <label for="body">Review</label>
-        <textarea class="form-control" placeholder="Enter your review" name="body" [(ngModel)] = "newReview.body" maxlength="400"></textarea>
-    </div>
-    <div class="form-group">
         <label for="rating">Rating</label>
-        <select class="form-control" name="rating">
+        <select class="form-control" name="rating" [(ngModel)]="newReview.rating" required #rating="ngModel" [class.is-valid]="rating.valid" [class.is-invalid]="rating.invalid && rating.touched">
+			<option></option>
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
             <option value="4">4</option>
             <option value="5">5</option>
         </select>
+		<div class="invalid-feedback">
+			Rating is required.
+		</div>
     </div>
-    <input type="submit" class="btn btn-default" value="Submit Review" />
 
-   
+    <input type="submit" class="btn btn-default" value="Submit Review" (click) = "submitClicked()" /> <!--[disabled] makes the submit button not work.-->
 </form>
-
